Add an old university assignment